tests/adhoc/nullness/enabled/positive.next.bsl

tests\adhoc\nullness\enabled\positive.fs(4,21): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(5,21): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(12,31): error FS0010: Unexpected symbol '|' in expression

tests\adhoc\nullness\enabled\positive.fs(18,28): error FS0010: Unexpected symbol '|' in expression

tests\adhoc\nullness\enabled\positive.fs(26,15): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(35,24): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(37,20): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(39,20): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(68,23): error FS0010: Unexpected symbol '|' in binding. Expected '=' or other token.

tests\adhoc\nullness\enabled\positive.fs(84,75): error FS0010: Unexpected symbol '|' in pattern. Expected ',' or other token.

tests\adhoc\nullness\enabled\positive.fs(174,44): error FS0010: Unexpected symbol '|' in expression

tests\adhoc\nullness\enabled\positive.fs(174,51): error FS0010: Unexpected symbol ')' in definition. Expected incomplete structured construct at or before this point or other token.
